--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,3 +1,4 @@
+# pubspec yaml adalah sebuah file yang menyimpan semua konfigurasi aplikasi dan libalary pihak ketig ayang akan digunakan oleh aplikasi
 name: e_commerce
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
@@ -77,6 +78,7 @@ flutter:
   - assets/icons/
   - assets/images/
   - assets/images/avatar.png
+  - assets/images/login_banner.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
